@@ -1,7 +1,8 @@
 // -*- mode:C++; tab-width:4; c-basic-offset:4; indent-tabs-mode:nil -*-
 
 /*
- * Copyright (C) 2007 Lorenzo Natale
+ * Author: Lorenzo Natale
+ * Copyright (C) 2007, 2010 The RobotCub Consortium
  * CopyPolicy: Released under the terms of the LGPLv2.1 or later, see LGPL.TXT
  *
  */
@@ -15,12 +16,15 @@ namespace yarp
 {
     namespace math
     {
+        /** 
+        * This class groups routines for random number generation.
+        */
         class Rand;
 
         /**
-         *
-         * Some helpers for internal use by yarp::math classes.
-         *
+         * Some helpers for internal use by yarp::math classes. Without much work
+         * these classes could be made available to users (in the yarp::math namespace).
+         * For now they should be considered only for internal usage.
          */
         namespace impl {
             class RandScalar;
@@ -36,14 +40,13 @@ namespace yarp
 */
 class yarp::math::impl::RandScalar
 {
-    static const int NTAB=32;
-    int idum;
-    int iy;
-    int iv[NTAB];
+    void *impl;
+    int seed;
     RandScalar(const RandScalar &l); 
 public:
      RandScalar(int seed);
      RandScalar();
+     ~RandScalar();
 
     /**
     * Initialize the random generator using
@@ -62,7 +65,7 @@ public:
     * @return the seed.
     */
      int getSeed ()
-     { return idum; }
+     { return seed; }
 
     /**
     * Generate a random number from a 
@@ -171,6 +174,32 @@ public:
 /**
 * A static class grouping function for random number 
 * generator. Thread safe.
+*
+* Methods inside this class provides access to a global instance 
+* of on object that generates random numbers. This class in turn 
+* is a simple wrapper around gsl routines. This probably provides
+* an excellent source of random numbers, but if you are picky about 
+* random number generation we recommend you read the gsl documentation 
+* (see below) or implement your own routines.
+* 
+* The initialization routine of the generator is basically:
+*
+* gsl_rng_env_setup();
+* T=gsl_rng_default;
+* r=gsl_rng_alloc(T);
+*
+* gsl_rng_set(T, seed);
+* 
+* which means that the behavior of the random generator can be configured
+* through the environment variables GSL_RNG_TYPE as described in the GSL 
+* documentation. The genrator is alwasy initialized with a seed equal to the
+* current time. You can reset the seed by explicitly calling Rand::init(seed).
+*
+* Default generator is gsl_rng_mt19937.
+*
+* See http://www.gnu.org/software/gsl/manual/html_node/Random-Number-Generation.html
+* for more information.
+* 
 */
 class yarp::math::Rand
 {
