@@ -1,33 +1,40 @@
 // -*- mode:C++; tab-width:4; c-basic-offset:4; indent-tabs-mode:nil -*-
 
+/*
+* Author: Lorenzo Natale
+* Copyright (C) 2007, 2010 The RobotCub Consortium
+* CopyPolicy: Released under the terms of the LGPLv2.1 or later, see LGPL.TXT
+*
+*/
+
+// Sept. 2010 Uses gsl routines for random generation.
+
 #include <yarp/os/Semaphore.h>
 #include <yarp/math/Rand.h>
 #include <time.h>
 #include <stdio.h>
 #include <math.h>
 
-//constants, from NR
-#define IA 16807
-#define IM 2147483647
-#define AM (1.0/IM)
-#define IQ 127773
-#define IR 2836
-#define NDIV (1+(IM-1)/NTAB)
-#define EPS 1.2e-7
-#define RNMX (1.0-EPS)
+#include <gsl/gsl_rng.h>
 
 using namespace yarp::os;
 using namespace yarp::sig;
 using namespace yarp::math;
 using namespace yarp::math::impl;
 
+/*
+* This class was used in the past to wrap random generation
+* routines that were not thread safe. Nowdays it could be no 
+* longer required because gsl routines are already declared to be 
+* thread safe.
+*/
 class ThreadSafeRandScalar : public RandScalar
 {
     yarp::os::Semaphore mutex;
 public:
     ThreadSafeRandScalar(): RandScalar()
     {
-        
+
     }
 
     void init()        
@@ -43,7 +50,7 @@ public:
         RandScalar::init(s);
         mutex.post();
     }
-    
+
     double get(double min=0.0, double max=1.0)
     {
         double ret;
@@ -98,38 +105,39 @@ Vector Rand::vector(const Vector &min, const Vector &max)
     return ret;
 }
 
+inline gsl_rng *implementation(void *t)
+{
+    return static_cast<gsl_rng *>(t);
+}
+
 RandScalar::RandScalar()
 {
-  idum=0;
-  iy=0;
-  init();
+    const gsl_rng_type *T;
+    gsl_rng_env_setup();
+    T=gsl_rng_default;
+    impl=gsl_rng_alloc(T);
+
+    init();
 }
 
 RandScalar::RandScalar(int seed)
 {
-  idum=0;
-  iy=0;
-  init(seed);
+    const gsl_rng_type *T;
+    gsl_rng_env_setup();
+    T=gsl_rng_default;
+    impl=gsl_rng_alloc(T);
+
+    init(seed);
+}
+
+RandScalar::~RandScalar()
+{
+    gsl_rng_free(implementation(impl));
 }
 
 double RandScalar::get()
 {
-  int k;
-  double temp;
-  int j;
-
-  k=(idum)/IQ;
-  idum=IA*(idum-k*IQ)-IR*k;
-  if (idum<0)
-    idum+=IM;
-  j=iy/NDIV;
-  iy=iv[j];
-  iv[j]=idum;
-  temp=AM*iy;
-  if (temp > RNMX)
-    temp=RNMX;
-
-  return temp;
+    return gsl_rng_uniform(implementation(impl));
 }
 
 double RandScalar::get(double min, double max)
@@ -141,85 +149,65 @@ double RandScalar::get(double min, double max)
 
 RandnScalar::RandnScalar()
 {
-  y[0] = 0.0;
-  y[1] = 0.0;
-  last = 2;
+    y[0] = 0.0;
+    y[1] = 0.0;
+    last = 2;
 }
 
 void RandnScalar::init()
 {
-  rnd.init();
-  last=2;
+    rnd.init();
+    last=2;
 }
 
 void RandnScalar::init(int aSeed)
 {
-  rnd.init(aSeed);
-  last = 2;
+    rnd.init(aSeed);
+    last = 2;
 }
 
 double RandnScalar::get()
 {
-  double ret;
-  if (last > 1)
+    double ret;
+    if (last > 1)
     {
         boxMuller();    //compute two normally distr random number
         last = 0;
     }
-    
-  ret = y[last];
-  last++;
-  return ret;
+
+    ret = y[last];
+    last++;
+    return ret;
 }
 
 inline void RandnScalar::boxMuller()
 {
-  double x1, x2;
-  double w = 2.0;
-  while (w >= 1.0)
+    double x1, x2;
+    double w = 2.0;
+    while (w >= 1.0)
     {
-      x1 = 2.0 * rnd.get() - 1.0;
-      x2 = 2.0 * rnd.get() - 1.0;
-      w = x1 * x1 + x2 * x2;
+        x1 = 2.0 * rnd.get() - 1.0;
+        x2 = 2.0 * rnd.get() - 1.0;
+        w = x1 * x1 + x2 * x2;
     }
 
-  w = sqrt( (-2.0 * log( w ) ) / w );
-  y[0] = x1 * w;
-  y[1] = x2 * w;
+    w = sqrt( (-2.0 * log( w ) ) / w );
+    y[0] = x1 * w;
+    y[1] = x2 * w;
 }
 
 
 // initialize with a call to "time"
 void RandScalar::init()
 {
-  // initialize with time
-  int t=(int)time(0);
-  RandScalar::init(t);
+    // initialize with time
+    int t=(int)time(0);
+    RandScalar::init(t);
 }
 
 void RandScalar::init(int s)
 {
-  idum=-s;
-  int k;
-  int j;
-
-  if (idum<=0 || !iy)
-    {
-      if (-idum<1)
-          idum=1;
-      else
-          idum=-idum;
-      for (j=NTAB+7;j>=0;j--)
-      {
-          k=(idum)/IQ;
-          idum=IA*(idum-k*IQ)-IR*k;
-          if (idum<0)
-              idum+=IM;
-          if (j<NTAB)
-              iv[j]=idum;
-      }
-      iy=iv[0];
-    }
+    gsl_rng_set(implementation(impl), s);
 }
 
 using namespace yarp::sig;
